--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <section class="About Me">
     <a class="button-two" href="#">About Me</a>
     <div class="main">
-        <img src="C:\Users\user\OneDrive-Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgabt.jpg">
+        <img src='C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgabt.jpg'>
         <div class="About Me-text">
             <h2> About Me</h2>
             <h4>Bachelor of Information Science (Hons) Library Management</h4>
@@ -39,7 +39,7 @@
                 I lived at Ampang, Selangor. I have three siblings and I am the eldest daughter.<br>
                 I like to play games with my friend whenever I have free time.</p>
                 <video width="320" height="240" controls>
-                    <source src="vdeoh.mp4" type="video/mp4">
+                    <source src='vdeoh.mp4' type="video/mp4">
                   </video>
 
         </div>    
@@ -56,9 +56,9 @@
             <th>2021-2023</th>
           </tr>
             <tr>
-              <td><img src="C:\Users\user\OneDrive-Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgsk.jpg"></td>
-              <td> <img src="C:\Users\user\OneDrive-Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgsmk.jpg"> </td>
-              <td><img src= "C:\Users\user\OneDrive-Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgstjohn.jpg"></td>
+              <td><img src='C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgsk.jpg'></td>
+              <td> <img src='C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgsmk.jpg'> </td>
+              <td><img src= 'C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgstjohn.jpg'></td>
             </tr>
             <tr>
               <td>SK Jalan Raja Muda</td>
