--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -13,10 +14,10 @@
         <nav>
             <h2 class="logo">My Website</h2>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Education</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#AboutMe">About Me</a></li>
+                <li><a href="index.html#Education">Education</a></li>
+                <li><a href="index.html#Contact">Contact</a></li>
             </ul>
         </nav>
 
